--- a/package.json
+++ b/package.json
@@ -38,14 +38,13 @@
     "all-contributors-cli": "5.6.0",
     "babel-loader": "8.0.x",
     "babel-plugin-add-module-exports": "1.0.x",
-    "cornerstone-core": "2.2.x",
-    "cornerstone-tools": "3.0.0-b.1512",
     "cpx": "1.5.x",
+    "cornerstone-core": "^2.3.0",
+    "cornerstone-tools": "^4.12.1",
     "eslint": "5.11.x",
     "eslint-loader": "2.1.x",
     "webpack": "4.28.x",
     "webpack-cli": "3.1.x",
     "webpack-dev-server": "3.1.x"
-  },
-  "dependencies": {}
+  }
 }
